fix: fixing te tests after changes